--- a/src/index.css
+++ b/src/index.css
@@ -253,7 +253,7 @@ ul {
   margin-top: 1rem;
 }
 /* ============= PROJECT CSS =============== */
-
+/* 
 .section-center {
   width: 90vw;
   margin: 0 auto;
@@ -303,6 +303,66 @@ form h4 {
   letter-spacing: var(--letterSpacing);
 }
 
+.remove-btn {
+  padding: 0.15rem 0.25rem;
+  font-size: 0.75rem;
+  background: var(--black);
+}
+
+.Toastify__toast {
+  text-transform: capitalize;
+} */
+
+.section-center {
+  width: 90vw;
+  margin: 0 auto;
+  margin-top: 8rem;
+  max-width: 30rem;
+  background: var(--white);
+  border-radius: var(--borderRadius);
+  box-shadow: var(--shadow-1);
+  padding: 2rem;
+  transition: var(--transition);
+}
+
+.section-center:hover {
+  box-shadow: var(--shadow-3);
+}
+form h4 {
+  text-align: center;
+  margin-bottom: 1.5rem;
+}
+
+.form-control {
+  display: grid;
+  grid-template-columns: 1fr 100px;
+}
+
+.form-input {
+  border-radius: 0;
+  border-top-left-radius: var(--borderRadius);
+  border-bottom-left-radius: var(--borderRadius);
+}
+
+.form-control .btn {
+  border-radius: 0;
+  border-top-right-radius: var(--borderRadius);
+  border-bottom-right-radius: var(--borderRadius);
+}
+.items {
+  margin-top: 2rem;
+  display: grid;
+  row-gap: 1rem;
+}
+.single-item {
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  column-gap: 1rem;
+  align-items: center;
+}
+.single-item p {
+  letter-spacing: var(--letterSpacing);
+}
 .remove-btn {
   padding: 0.15rem 0.25rem;
   font-size: 0.75rem;
